force-app/main/default/objects/Solution__kav/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Omnitracs US</fullName>
            </value>
            <value>
                <fullName>Omnitracs MX</fullName>
            </value>
            <value>
                <fullName>Roadnet</fullName>
            </value>
            <value>
                <fullName>Sylectus</fullName>
            </value>
            <value>
                <fullName>FRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>