force-app/main/default/objects/Solution__kav/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Provide a detailed description for the given topic such as solution details, troubleshooting steps, etc.</description>
    <label>Details</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>