force-app/main/default/objects/Solution__kav/fields/Internal_Process__c.field-meta.xml
<CustomField>
    <fullName>Internal_Process__c</fullName>
    <description>Provide details that are visible only to internal users</description>
    <label>Internal Process</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>