force-app/main/default/objects/Solution__kav/fields/Related_Engineering_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Engineering_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Engineering Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Solutions</relationshipLabel>
    <relationshipName>Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>