force-app/main/default/objects/Solution__kav/fields/Related_Links__c.field-meta.xml
<CustomField>
    <fullName>Related_Links__c</fullName>
    <description>Provide relevant links if applicable</description>
    <label>Related Links</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>